# web-access-cli

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: build.yml
crates/wa-cli/: Cargo.toml
crates/wa-cli/src/: main.rs
crates/wa-cli/tests/: cli_tests.rs
crates/wa-core/: Cargo.toml
crates/wa-core/src/: config.rs  error.rs  lib.rs  types.rs  url_rewrite.rs
crates/wa-core/tests/: config_tests.rs  types_and_errors_tests.rs
crates/wa-crawl/: Cargo.toml
crates/wa-crawl/src/: crawler.rs  lib.rs  link_extract.rs  sitemap.rs
crates/wa-extract/: Cargo.toml
crates/wa-extract/src/: lib.rs
crates/wa-extract/tests/: extract_tests.rs
crates/wa-git/: Cargo.toml
crates/wa-git/src/: lib.rs
crates/wa-git/tests/: git_tests.rs
crates/wa-search/: Cargo.toml
crates/wa-search/src/: lib.rs
crates/wa-search/tests/: search_tests.rs
