[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/user/web-access-cli"

[workspace.dependencies]
wa-core = { path = "crates/wa-core" }
wa-search = { path = "crates/wa-search" }
wa-extract = { path = "crates/wa-extract" }
wa-git = { path = "crates/wa-git" }

# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
toml = "0.8"
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# External — webclaw full stack (fetching + extraction, AGPL-3.0)
# Pinned to a specific commit for reproducible builds.
webclaw-fetch = { git = "https://github.com/0xMassi/webclaw", rev = "923445f" }

# Dev dependencies
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
