[package]
name = "wa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wa"
path = "src/main.rs"

[dependencies]
wa-core = { workspace = true }
wa-search = { workspace = true }
wa-extract = { workspace = true }
wa-git = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
