[package]
name = "wa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
dirs = "5"
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
temp-env = "0.3"
