[package]
name = "wa-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wa-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
